<resources>
    <string name="app_name">NOW SOPT Android</string>

    <!--LoginActivity Strings-->
    <string name="login_et_pw_hint">비밀번호를 입력해주세요.</string>
    <string name="login_et_id_hint">아이디를 입력해주세요.</string>
    <string name="login_tv_title">Welcome to SOPT</string>
    <string name="login_tv_id">ID</string>
    <string name="login_tv_pw">PW</string>
    <string name="login_btn_login">로그인 하기</string>
    <string name="login_btn_signup">회원가입 하기</string>

    <!--SignUpActivity Strings-->
    <string name="signup_tv_title">SIGN UP</string>
    <string name="signup_tv_id">ID</string>
    <string name="signup_tv_pw">PW</string>
    <string name="signup_tv_nickname">닉네임</string>
    <string name="signup_tv_phone_num">전화번호</string>
    <string name="signup_et_hint_id">아이디를 입력해주세요.</string>
    <string name="signup_et_hint_pw">비밀번호를 입력해주세요.</string>
    <string name="signup_et_hint_nickname">닉네임을 입력해주세요.</string>
    <string name="signup_et_hint_phone_num">전화번호를 입력해주세요</string>
    <string name="signup_btn_signup">회원가입 하기</string>

    <!--Bottom Navigation Strings-->
    <string name="bottom_nav_title_home">홈</string>
    <string name="bottom_nav_title_search">검색</string>
    <string name="bottom_nav_title_mypage">마이페이지</string>

    <!--MyPage Strings-->
    <string name="mypage_iv_profile">profile</string>
    <string name="mypage_tv_phone_num">전화번호: %s</string>
    <string name="mypage_tv_title_id">ID</string>
    <string name="mypage_tv_title_pw">비밀번호</string>
    <string name="mypage_btn_logout">로그아웃</string>

    <!--Toast Messages-->
    <string name="toast_login_success">로그인에 성공했습니다.</string>
    <string name="toast_login_fail_blank_id">아이디를 입력해주세요</string>
    <string name="toast_login_fail_blank_pw">비밀번호를 입력해주세요</string>
    <string name="toast_login_fail_wrong_id">아이디를 확인해주세요</string>
    <string name="toast_login_fail_wrong_pw">비밀번호를 확인해주세요</string>

    <string name="toast_signup_success">회원가입에 성공하였습니다.</string>
    <string name="toast_signup_check_id">아이디는 6~10 글자</string>
    <string name="toast_signup_check_pw">비밀번호는 8~12 글자</string>
    <string name="toast_signup_check_nickname">닉네임 한 글자 이상</string>
    <string name="toast_signup_check_mbti">MBTI 공백 불가</string>
    <string name="mypage_btn_change_pw">비밀번호 변경</string>
    <string name="password_tv_before">기존 비밀번호</string>
    <string name="password_tv_new">새 비밀번호</string>
    <string name="password_tv_new_check">새 비밀번호 확인</string>

    <!--Retrofit Message-->
    <string name="retrofit_error_server">서버 에러</string>
    <string name="retrofit_error_login">로그인 실패 %s</string>

    <string name="retrofit_success_login">로그인 성공 (유저 ID: %s)</string>
    <string name="retrofit_failure_login">로그인 실패 (%s)</string>

</resources>